fixed spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -229,5 +229,10 @@ footer {
 
 /* trip - show itinerary */
 #itinerary {
-  border-left: solid $navbar-color 3px;
+  border-left: solid $navbar-color 4px;
+}
+
+/* dashboard */
+#dashboard {
+  
 }
